--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,35 @@
-name: CI/CD Pipeline
+name: CI/CD Workflow
+
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
+
 jobs:
-  e2e-tests:
-    runs-on: ubuntu-latest # or macos-latest, windows-latest
-
+  wdio-test:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+    
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-            node-version: ${{ matrix.node-version }}
+          node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests
+      - name: Install Chrome
+        uses: browser-actions/setup-chrome@v1
+
+      - name: Check Chrome Version
+        run: google-chrome --version
+
+      - name: Run Tests
         run: npm run wdio
         env:
-          LOGIN_EMAIL: ${{ secrets.LOGIN_EMAIL }}
+          LOGIN_EMAIL: ${{ secrets.LOGIN_EMAIL }}s
           INVALID_PASSWORD: ${{ secrets.INVALID_PASSWORD }}
