--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: google-chrome --version
 
       - name: Run Tests
-        run: npm run wdio
+        run: npm run test
         env:
-          LOGIN_EMAIL: ${{ secrets.LOGIN_EMAIL }}s
+          LOGIN_EMAIL: ${{ secrets.LOGIN_EMAIL }}
           INVALID_PASSWORD: ${{ secrets.INVALID_PASSWORD }}
