--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-performance-wdio",
   "type": "module",
   "devDependencies": {
+    "@wdio/cli": "^9.4.1",
     "@wdio/local-runner": "^9.4.1",
     "@wdio/mocha-framework": "^9.2.8"
   },
